Fix routing instructions viewport on mobile

--- a/src/styles/mapstyles.css
+++ b/src/styles/mapstyles.css
@@ -1,5 +1,5 @@
 :root {
-    --map-height: 100vh;
+    --map-height: 100svh;
 }
 
 #map {
@@ -7,7 +7,6 @@
     user-select: none;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
-    max-height: var(--map-height);
 }
 
 img {
@@ -15,6 +14,10 @@ img {
     width: 100%;
     height: auto;
     -webkit-user-drag: none;
+}
+
+.leaflet-bottom.leaflet-right {
+    bottom: calc(100svh - var(--map-height));
 }
 
 /* MAP CONTROLS */
@@ -319,7 +322,7 @@ a.leaflet-popup-close-button {
     left: 0;
     right: 0;
     width: 100vw;
-    max-height: calc(100vh - var(--map-height));
+    max-height: calc(100svh - var(--map-height));
     border: 0 !important;  
     border-radius: 0;
     outline: 2px solid black;
